# weekly-meal-planner

./: IDEAS.md  PRICE_DATABASE_README.md  README.md  add_costs_to_recipes.py  firebase_config.py  ingredient_prices.yaml  main.py  pyproject.toml  update_prices.py
.claude/: CLAUDE.md
.claude/agents/: deployment-checker.md
.claude/commands/: fill-descriptions.json  fill-descriptions.md  fill-tags.md
.claude/docs/: claude.md  firebase-cloud-sync-implementation.md
.claude/skills/: fill-metadata.md  fill-tags.md  validate-recipes.md
.claude/utils/: recipe-utils.py
.github/workflows/: deploy.yml  test.yml
images/recipes/: README.md
recipe_generator/: __init__.py  config.py  cost_calculator.py  html_generator.py  validators.py
recipes/: backkartoffel-mit-quark.yaml  bolognese-eintopf.yaml  buchweizenbrötchen.yaml  chia-pudding.yaml  chiasamenbrot.yaml  falscher-toast-mit-feta.yaml  fischpfanne.yaml  franconian-breakfast.yaml  gefuellte-lachs-gemueserolle.yaml  gnocchipfanne.yaml  griechischer-joghurt-mit-honig-und-walnuessen.yaml  gulasch-nach-oma-magda.yaml  kartoffelpuffer-mit-apfelkompott.yaml  kimchi.yaml  leinsamen-möhren-brot.yaml  nuss-porridge.yaml  ofengemuese-mit-avocado-dip.yaml  pfannkuchen-mit-himbeerfuellung.yaml  putenbrust-mit-wildreis-und-moehren.yaml  saftiges-nussbrot.yaml  senfeier.yaml  sesam-rucola-brot.yaml  spinat-püree-mit-spiegelei.yaml  steakstreifen-auf-kartoffelpueree.yaml
recipes/Chefkoch/: baba-ghanoush.yaml  (+8 more)
tests/: __init__.py  test_config.py  test_html_generator.py  test_import_export.py  test_validators.py
(+87 files in other folders)
